[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
config = "0.13.0"
chrono = "0.4.20"
uuid = {version = "1", features = ["v4"]}
log = "0.4.17"
tracing = {version = "0.1.36", features = ["log"]}
tracing-subscriber = {version = "0.3.15", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
once_cell = "1.13.0"
secrecy = {version = "0.8.0", features = ["serde"]}
tracing-actix-web = "0.6.0"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = "0.11"

[target.x86_64-unkwon-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=fuse-ld=lld"]
